--- a/lab/media-player.html
+++ b/lab/media-player.html
@@ -255,15 +255,34 @@
             width: 100%;
             height: 100%;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            gap: 0.25rem;
+        }
+
+        .eq-slider__wrapper {
+            position: relative;
+            width: 100%;
+            flex: 1;
+            display: flex;
+            justify-content: center;
+        }
+
+        .eq-slider__label {
+            font-size: 0.65rem;
+            color: oklch(from #ccc l c h / 0.7);
+            text-align: center;
+            font-variant-numeric: tabular-nums;
+            letter-spacing: 0.02em;
         }
 
         .eq-slider__track {
             position: absolute;
             background: oklch(from #fff l c h / 0.1);
             width: 4px;
-            height: 80%;
+            height: 100%;
+            /* Fill the wrapper */
             border-radius: 4px;
         }
 
@@ -327,34 +346,49 @@
 
         <div class="media-player__equalizer">
             <div class="media-player__equalizer__slider">
-                <div class="eq-slider__track"></div>
-                <div class="eq-slider__fill"></div>
-                <div class="eq-slider__thumb"></div>
-                <input type="range" min="-12" max="12" value="3" aria-label="50Hz" step="0.1">
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="3" aria-label="50Hz" step="0.1">
+                </div>
+                <span class="eq-slider__label">50Hz</span>
             </div>
             <div class="media-player__equalizer__slider">
-                <div class="eq-slider__track"></div>
-                <div class="eq-slider__fill"></div>
-                <div class="eq-slider__thumb"></div>
-                <input type="range" min="-12" max="12" value="6" aria-label="230Hz" step="0.1">
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="6" aria-label="230Hz" step="0.1">
+                </div>
+                <span class="eq-slider__label">230Hz</span>
             </div>
             <div class="media-player__equalizer__slider">
-                <div class="eq-slider__track"></div>
-                <div class="eq-slider__fill"></div>
-                <div class="eq-slider__thumb"></div>
-                <input type="range" min="-12" max="12" value="-2" aria-label="910Hz" step="0.1">
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="-2" aria-label="910Hz" step="0.1">
+                </div>
+                <span class="eq-slider__label">910Hz</span>
             </div>
             <div class="media-player__equalizer__slider">
-                <div class="eq-slider__track"></div>
-                <div class="eq-slider__fill"></div>
-                <div class="eq-slider__thumb"></div>
-                <input type="range" min="-12" max="12" value="4" aria-label="4kHz" step="0.1">
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="4" aria-label="4kHz" step="0.1">
+                </div>
+                <span class="eq-slider__label">4kHz</span>
             </div>
             <div class="media-player__equalizer__slider">
-                <div class="eq-slider__track"></div>
-                <div class="eq-slider__fill"></div>
-                <div class="eq-slider__thumb"></div>
-                <input type="range" min="-12" max="12" value="0" aria-label="12kHz" step="0.1">
+                <div class="eq-slider__wrapper">
+                    <div class="eq-slider__track"></div>
+                    <div class="eq-slider__fill"></div>
+                    <div class="eq-slider__thumb"></div>
+                    <input type="range" min="-12" max="12" value="0" aria-label="12kHz" step="0.1">
+                </div>
+                <span class="eq-slider__label">12kHz</span>
             </div>
         </div>
     </section>
