--- a/lab.html
+++ b/lab.html
@@ -124,6 +124,11 @@
         </a>
       </li>
       <li class="footer-menu--item" role='listitem'>
+        <a href="/lab.html" class="lab" data-analytics-link="Lab">
+          <p class='icon-text'>Lab</p>
+        </a>
+      </li>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label='LinkedIn Icon' style="width:2em;height:2em"
             viewbox="0 0 24 24">
