--- a/resume.html
+++ b/resume.html
@@ -235,6 +235,11 @@
         </a>
       </li>
       <li class="footer-menu--item" role='listitem'>
+        <a href="/lab.html" class="lab" data-analytics-link="Lab">
+          <p class='icon-text'>Lab</p>
+        </a>
+      </li>
+      <li class="footer-menu--item" role='listitem'>
         <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
           <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width:1.5rem;height:1.5rem"
             viewbox="0 0 24 24">
