--- a/lab/media-player-widget.html
+++ b/lab/media-player-widget.html
@@ -28,15 +28,17 @@
         .media-player {
             container-type: inline-size;
             display: grid;
-            grid-template-columns: 2rem 1fr;
-            grid-template-rows: 1rem 2rem;
+            grid-template-columns: auto 1fr;
+            grid-template-rows: .5rem 2rem;
             gap: .5rem;
             padding: .75rem;
+            padding-inline-start: 0;
             inline-size: 18rem;
             background: oklch(from #2a2a2a l c h);
             border-radius: .75rem;
             box-shadow: 0 0 2px color-mix(in oklch, oklch(from orange l c h) 48%, transparent 52%);
             align-items: center;
+            overflow: clip;
         }
 
         .media-player__controls {
@@ -47,9 +49,14 @@
             align-items: center;
             justify-items: center;
             inline-size: 15rem;
-            padding: .25rem;
+            /* padding: .25rem; */
             border-radius: .5rem;
             /* background: oklch(from #333 l c h); */
+
+            button {
+                outline: none;
+                background: transparent;
+            }
         }
 
         button {
@@ -81,11 +88,12 @@
 
         .media-player__current {
             grid-column: 1;
-            grid-row: 2;
-            inline-size: 2rem;
-            block-size: 2rem;
+            grid-row: span 2;
+            inline-size: 3rem;
+            block-size: 6cqh;
             padding: 0;
             overflow: hidden;
+            border-radius: 0;
         }
 
         .media-player__current img {
@@ -102,7 +110,7 @@
             align-items: center;
             gap: .5rem;
             text-align: left;
-            padding-inline-start: .25rem;
+            padding-inline-start: .65rem;
             width: 100%;
             overflow: hidden;
         }
@@ -153,8 +161,8 @@
         <div class="media-player__controls">
             <button class="media-player__dislike" title="Dislike">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
-                    <path
-                        d="M240-840h520v80h-80v360q0 33-23.5 56.5T600-320H306l50 198v16q0 12-5 25t-15 23l-44 44-262-262v-480h210Zm0 80v366l114 114h146v-480H240Zm520 0v480h80v-480h-80Z" />
+                    <path transform="rotate(180 480 -480)"
+                        d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
                 </svg>
             </button>
 
@@ -195,6 +203,8 @@
         const playIconPath = playButton.querySelector('svg path');
         const likeButton = document.querySelector('.media-player__like');
         const likeIconPath = likeButton.querySelector('svg path');
+        const dislikeButton = document.querySelector('.media-player__dislike');
+        const dislikeIconPath = dislikeButton.querySelector('svg path');
         const prevButton = document.querySelector('.media-player__prev');
         const nextButton = document.querySelector('.media-player__next');
         const titleEl = document.querySelector('.media-player__meta__title');
@@ -210,6 +220,7 @@
         const tracks = audioLibrary.getAll();
         let currentIndex = 0;
         let isLiked = false;
+        let isDisliked = false;
 
         function loadTrack(index) {
             if (index < 0) index = tracks.length - 1;
@@ -226,9 +237,9 @@
             artistEl.textContent = track.artist;
 
             if (track.albumArt) {
-                 currentArtBtn.innerHTML = `<img src="${track.albumArt}" alt="${track.title}">`;
+                currentArtBtn.innerHTML = `<img src="${track.albumArt}" alt="${track.title}">`;
             } else {
-                 currentArtBtn.innerHTML = `
+                currentArtBtn.innerHTML = `
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                         <path d="M400-120q-66 0-113-47t-47-113q0-66 47-113t113-47q23 0 42.5 5.5T480-418v-422h240v160H560v400q0 66-47 113t-113 47Z" />
                     </svg>`;
@@ -240,8 +251,8 @@
         }
 
         const updatePlayIcon = () => {
-             if (audio.paused) playIconPath.setAttribute('d', playPath);
-             else playIconPath.setAttribute('d', pausePath);
+            if (audio.paused) playIconPath.setAttribute('d', playPath);
+            else playIconPath.setAttribute('d', pausePath);
         };
 
         playButton.addEventListener('click', () => {
@@ -257,7 +268,20 @@
 
         likeButton.addEventListener('click', () => {
             isLiked = !isLiked;
+            if (isLiked) {
+                isDisliked = false;
+                dislikeIconPath.setAttribute('d', likePath); // Reset dislike
+            }
             likeIconPath.setAttribute('d', isLiked ? likeFilledPath : likePath);
+        });
+
+        dislikeButton.addEventListener('click', () => {
+            isDisliked = !isDisliked;
+            if (isDisliked) {
+                isLiked = false;
+                likeIconPath.setAttribute('d', likePath); // Reset like
+            }
+            dislikeIconPath.setAttribute('d', isDisliked ? likeFilledPath : likePath);
         });
 
         prevButton.addEventListener('click', () => {
@@ -273,7 +297,7 @@
         audio.addEventListener('play', updatePlayIcon);
         audio.addEventListener('pause', updatePlayIcon);
         audio.addEventListener('ended', () => {
-             playIconPath.setAttribute('d', playPath);
+            playIconPath.setAttribute('d', playPath);
         });
 
     </script>
