add tooltip to media player presets

--- a/lab/media-player-widget.html
+++ b/lab/media-player-widget.html
@@ -75,7 +75,7 @@
         }
 
         button:hover {
-            background: oklch(from #555 l c h);
+            background: transparent;
         }
 
         .media-player__play {
@@ -83,14 +83,14 @@
         }
 
         .media-player__play:hover {
-            background: oklch(from #0056b3 l c h);
+            background: transparent
         }
 
         .media-player__current {
             grid-column: 1;
             grid-row: span 2;
             inline-size: 3rem;
-            block-size: 6cqh;
+            block-size: 4.5rem;
             padding: 0;
             overflow: hidden;
             border-radius: 0;
