--- a/lab/media-player-widget.html
+++ b/lab/media-player-widget.html
@@ -5,85 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Player Widget</title>
+    <link rel="stylesheet" href="../styles/components/media-player.css">
     <style>
-        body {
-            display: grid;
-            place-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: oklch(from #1a1a1a l c h);
-            color: white;
-            font-family: system-ui, sans-serif;
-            font-size: .5rem;
-        }
-
-        .material-symbols-outlined {
-            font-variation-settings:
-                'FILL' 0,
-                'wght' 400,
-                'GRAD' 0,
-                'opsz' 2124
-        }
-
         .media-player {
-            container-type: inline-size;
-            display: grid;
             grid-template-columns: auto 1fr;
             grid-template-rows: .5rem 2rem;
             gap: .5rem;
             padding: .75rem;
             padding-inline-start: 0;
             inline-size: 18rem;
-            background: oklch(from #2a2a2a l c h);
             border-radius: .75rem;
-            box-shadow: 0 0 2px color-mix(in oklch, oklch(from orange l c h) 48%, transparent 52%);
             align-items: center;
             overflow: clip;
         }
 
         .media-player__controls {
-            display: grid;
             grid-column: 2;
             grid-template-columns: repeat(5, 1fr);
             gap: .125rem;
-            align-items: center;
-            justify-items: center;
             inline-size: 15rem;
-            /* padding: .25rem; */
-            border-radius: .5rem;
-            /* background: oklch(from #333 l c h); */
 
             button {
                 outline: none;
                 background: transparent;
             }
-        }
-
-        button {
-            padding: .25rem;
-            margin: 0;
-            border: none;
-            border-radius: .25rem;
-            background: oklch(from #444 l c h);
-            color: white;
-            cursor: pointer;
-            display: grid;
-            place-items: center;
-            inline-size: 75%;
-            aspect-ratio: 1;
-            outline: .0625rem solid oklch(from #5c5c5c l c h);
-        }
-
-        button:hover {
-            background: transparent;
-        }
-
-        .media-player__play {
-            background: oklch(from #007bff l c h);
-        }
-
-        .media-player__play:hover {
-            background: transparent
         }
 
         .media-player__current {
@@ -92,54 +37,24 @@
             inline-size: 3rem;
             block-size: 4.5rem;
             padding: 0;
-            overflow: hidden;
             border-radius: 0;
-        }
-
-        .media-player__current img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: inherit;
         }
 
         .media-player__meta {
             grid-column: 2 / -1;
             grid-row: 1;
-            display: flex;
-            align-items: center;
+            flex-direction: row;
             gap: .5rem;
-            text-align: left;
             padding-inline-start: .65rem;
             width: 100%;
-            overflow: hidden;
         }
 
         .media-player__meta__title {
-            font-weight: bold;
             font-size: .65rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
         }
 
         .media-player__meta__artist {
             font-size: .55rem;
-            color: oklch(from #ccc l c h);
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-
-        .media-player__like {}
-
-        svg {
-            width: 100%;
-            height: 100%;
-            max-width: 24px;
-            max-height: 24px;
-            fill: oklch(from #e3e3e3 l c h);
         }
     </style>
 </head>
